syntax = "proto3";
package management;

service ManagementService {
   rpc List (Empty) returns (ManagementList) {}
   rpc Create (Management) returns (Management) {}
   rpc ReadByStudentID (StudentRequestId) returns (ManagementList) {}
   rpc ReadByProjectID (ProjectRequestId) returns (ManagementList) {}
   rpc Delete (ManagementRequestId) returns (Empty) {}
}
message Empty {}
message Management {
   string id = 1;
   string student_id = 2;
   string project_id = 3;
   string project_name= 4;
   string project_description = 5;
   string first_name = 6;
   string last_name = 7;
   string email = 8;
}
message ManagementList {
   repeated Management managements = 1;
}
message ManagementRequestId {
   string id = 1;
}
message StudentRequestId {
   string student_id = 2;
}
message ProjectRequestId {
  string project_id = 3;
}